NXT-1833: Provide node error message also in case of inactive nodes
Because especially in a try-catch-context a node can be inactive (since
failing nodes are inactivated) but still have an error message that
needs to be shown to the user.

Further minor changes:
- Clarify usage of service dependencies (unrelated to ticket)
- Formatting and linting

NXT-1833 (Execution state of component with failing node undefined in try-catch)